--- a/estilos.css
+++ b/estilos.css
@@ -1,15 +1,14 @@
 html, body {
   height: 100%;
-  margin: 0;
 }
 
 body {
-  background-image: url(imgs/ilha.jpg);
+  background-image: url(imgs/fundo-da-ilha-pirata.jpg);
   background-repeat: no-repeat;
   background-position: left bottom;
   background-size: cover;
   margin: 0% 25%;
-  font-size: 18px;
+  font-size: 20px;
   text-align: center;
 }
 
@@ -19,19 +18,14 @@ h1 {
   text-shadow: 2px 2px black;
 }
 
-img {
-  height: 1.5em;
-}
-
 p, caption {
-  text-shadow: 1px 1px black;
-  color: white;
+  background-color: rgba(255, 255, 255, .7);
 }
 
 table {
   border-collapse: collapse;
-  width: 100%;
-  color: black;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 td,th {
@@ -40,7 +34,7 @@ td,th {
 
 tbody {
   border-left: 1px solid gray;
-  border-right: 1px solid grey;
+  border-right: 1px solid gray;
   background-color: white;
 }
 
@@ -59,5 +53,4 @@ thead {
 caption {
   font-size: 75%;
   font-style: italic;
-  color: white;
 }
